[package]
name = "warp-easy-async"
version = "0.1.0"
authors = ["Zerve0 <zerve0@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["macros", "blocking"] }